phase2_Dev/src/objects/Standard_Checklist_Reference__c.object
<CustomObject>
    <description>Standard Checklist Reference object manages standard inspection checklists for all Provider Types</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this checklist is active and can be used.</description>
        <inlineHelpText>If checked, this checklist is active and can be used. If not checked, it will not be available for use.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_information__c</fullName>
        <description>Additional information</description>
        <label>Additional information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Applicable_To__c</fullName>
        <description>Type of provider this checklist applies to</description>
        <label>Applicable To</label>
        <picklist>
            <picklistValues>
                <fullName>Family Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Care Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoption Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Shelter</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_for__c</fullName>
        <inlineHelpText>List of visit reasons that could use this visit tool. If a reason is selected, then this tool should be available as a selection for this type of visits.</inlineHelpText>
        <label>Available for</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Licensing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisional License Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisional License 90-day Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal - Full Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal - Enhanced Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal - Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhanced Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Activate Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License Change</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CopyNonComplainceVisitItems__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Non Compliance from previous visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of how and when this checklist should be used.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_VT_ID__c</fullName>
        <externalId>true</externalId>
        <label>External VT ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longer_visit_if_Non_Compliant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Visit tool that should be recommended by the system instead of the standard tool (Recommended For) if the selected provider as too many violations in the past period.</inlineHelpText>
        <label>Longer visit if Non-Compliant</label>
        <referenceTo>Standard_Checklist_Reference__c</referenceTo>
        <relationshipLabel>Visit Tools</relationshipLabel>
        <relationshipName>Visit_Tools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_of_Random_Items_Per_Domain_to_Pick__c</fullName>
        <inlineHelpText>Number of Random Items that should be added to the visit tool key indicators when this visit tool is used. Select &quot;0&quot; if no random item should be added.</inlineHelpText>
        <label>No. of Random Items Per Domain to Pick</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>The order of the tools in the views.</description>
        <label>Rank In Tool Selection Screen</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommended_for__c</fullName>
        <label>Recommended for</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Licensing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisional License Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal - Full Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal - Enhanced Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhanced Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Activate Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal - Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisional License 90-day Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License Change</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Visit Tool</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Applicable_To__c</columns>
        <columns>Active__c</columns>
        <columns>Available_for__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Description__c</columns>
        <columns>Applicable_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active</label>
    </listViews>
    <listViews>
        <fullName>All_FCC_Active</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Description__c</columns>
        <columns>Applicable_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Applicable_To__c</field>
            <operation>includes</operation>
            <value>Family Child Care</value>
        </filters>
        <label>All FCC Active</label>
    </listViews>
    <listViews>
        <fullName>All_R_P_Active</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Description__c</columns>
        <columns>Applicable_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Applicable_To__c</field>
            <operation>includes</operation>
            <value>Foster Care Agency</value>
        </filters>
        <filters>
            <field>Applicable_To__c</field>
            <operation>includes</operation>
            <value>Adoption Agency</value>
        </filters>
        <filters>
            <field>Applicable_To__c</field>
            <operation>includes</operation>
            <value>Temporary Shelter</value>
        </filters>
        <filters>
            <field>Applicable_To__c</field>
            <operation>includes</operation>
            <value>Group Care</value>
        </filters>
        <label>All R&amp;P Active</label>
    </listViews>
    <listViews>
        <fullName>All_SG_LG_Active</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Description__c</columns>
        <columns>Applicable_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Applicable_To__c</field>
            <operation>includes</operation>
            <value>Small Group</value>
        </filters>
        <filters>
            <field>Applicable_To__c</field>
            <operation>includes</operation>
            <value>Large Group</value>
        </filters>
        <label>All SG / LG Active</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Tools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Available_Included_in_Recommended</fullName>
        <active>true</active>
        <description>*Recommended for* should contain only elements selected in *Available for* meaning that if an choice is not selected in *Available for*, it shouldn&apos;t be selected for *Recommended for*.</description>
        <errorConditionFormula>(INCLUDES( Recommended_for__c , &quot;Pre-Licensing&quot;) &amp;&amp; NOT( INCLUDES( Available_for__c , &quot;Pre-Licensing&quot;))) ||
(INCLUDES( Recommended_for__c , &quot;Provisional License Renewal&quot;) &amp;&amp; NOT( INCLUDES( Available_for__c , &quot;Provisional License Renewal&quot;))) ||
(INCLUDES( Recommended_for__c , &quot;Renewal&quot;) &amp;&amp; NOT( INCLUDES( Available_for__c , &quot;Renewal&quot;))) ||
(INCLUDES( Recommended_for__c , &quot;Monitoring&quot;) &amp;&amp; NOT( INCLUDES( Available_for__c , &quot;Monitoring&quot;))) ||
(INCLUDES( Recommended_for__c , &quot;Progress&quot;) &amp;&amp; NOT( INCLUDES( Available_for__c , &quot;Progress&quot;))) ||
(INCLUDES( Recommended_for__c , &quot;Enhanced Monitoring&quot;) &amp;&amp; NOT( INCLUDES( Available_for__c , &quot;Enhanced Monitoring&quot;))) ||
(INCLUDES( Recommended_for__c , &quot;Follow-up&quot;) &amp;&amp; NOT( INCLUDES( Available_for__c , &quot;Follow-up&quot;))) ||
(INCLUDES( Recommended_for__c , &quot;Change of Location&quot;) &amp;&amp; NOT( INCLUDES( Available_for__c , &quot;Change of Location&quot;))) ||
(INCLUDES( Recommended_for__c , &quot;Change of Space&quot;) &amp;&amp; NOT( INCLUDES( Available_for__c , &quot;Change of Space&quot;))) ||
(INCLUDES( Recommended_for__c , &quot;License Upgrade&quot;) &amp;&amp; NOT( INCLUDES( Available_for__c , &quot;License Upgrade&quot;))) ||
(INCLUDES( Recommended_for__c , &quot;Capacity Increase&quot;) &amp;&amp; NOT( INCLUDES( Available_for__c , &quot;Capacity Increase&quot;))) ||
(INCLUDES( Recommended_for__c , &quot;Technical Assistance&quot;) &amp;&amp; NOT( INCLUDES( Available_for__c , &quot;Technical Assistance&quot;))) ||
(INCLUDES( Recommended_for__c , &quot;Investigation&quot;) &amp;&amp; NOT( INCLUDES( Available_for__c , &quot;Investigation&quot;)))</errorConditionFormula>
        <errorMessage>An item cannot be in Recommended for unless it is selected in Available for as well.</errorMessage>
    </validationRules>
</CustomObject>